@@ -510,7 +510,10 @@ static ALWAYS_INLINE PassRefPtr<UString::Rep> concatenate(PassRefPtr<UString::Re
         rep = UString::Rep::createCopying(tData, tSize);
     } else if (rep == base && !base->isShared()) {
         // this is direct and has refcount of 1 (so we can just alter it directly)
-        if (!expandCapacity(rep.get(), thisOffset + length))
+        int newCapacity = thisOffset + length;
+        if (newCapacity < thisOffset)
+            CRASH();
+        if (!expandCapacity(rep.get(), newCapacity))
             rep = &UString::Rep::null();
         if (rep->data()) {
             copyChars(rep->data() + thisSize, tData, tSize);
@@ -519,7 +522,10 @@ static ALWAYS_INLINE PassRefPtr<UString::Rep> concatenate(PassRefPtr<UString::Re
         }
     } else if (thisOffset + thisSize == base->usedCapacity && thisSize >= minShareSize) {
         // this reaches the end of the buffer - extend it if it's long enough to append to
-        if (!expandCapacity(rep.get(), thisOffset + length))
+        int newCapacity = thisOffset + length;
+        if (newCapacity < thisOffset)
+            CRASH();
+        if (!expandCapacity(rep.get(), newCapacity))
             rep = &UString::Rep::null();
         if (rep->data()) {
             copyChars(rep->data() + thisSize, tData, tSize);
@@ -564,7 +570,10 @@ static ALWAYS_INLINE PassRefPtr<UString::Rep> concatenate(PassRefPtr<UString::Re
         // t is empty, we'll just return *this below.
     } else if (rep == base && !base->isShared()) {
         // this is direct and has refcount of 1 (so we can just alter it directly)
-        expandCapacity(rep.get(), thisOffset + length);
+        int newCapacity = thisOffset + length;
+        if (newCapacity < thisOffset)
+            CRASH();
+        expandCapacity(rep.get(), newCapacity);
         UChar* d = rep->data();
         if (d) {
             for (int i = 0; i < tSize; ++i)
@@ -574,7 +583,10 @@ static ALWAYS_INLINE PassRefPtr<UString::Rep> concatenate(PassRefPtr<UString::Re
         }
     } else if (thisOffset + thisSize == base->usedCapacity && thisSize >= minShareSize) {
         // this string reaches the end of the buffer - extend it
-        expandCapacity(rep.get(), thisOffset + length);
+        int newCapacity = thisOffset + length;
+        if (newCapacity < thisOffset)
+            CRASH();
+        expandCapacity(rep.get(), newCapacity);
         UChar* d = rep->data();
         if (d) {
             for (int i = 0; i < tSize; ++i)
@@ -636,8 +648,12 @@ PassRefPtr<UString::Rep> concatenate(UString::Rep* a, UString::Rep* b)
         // - also, it's at least a quarter the length of b - appending to a much shorter
         //   string does more harm than good
         // - however, if b qualifies for prepend and is longer than a, we'd rather prepend
+        
         UString x(a);
-        x.expandCapacity(aOffset + length);
+        int capacity = aOffset + length;
+        if (capacity < aOffset)
+            CRASH();
+        x.expandCapacity(capacity);
         if (!a->data() || !x.data())
             return 0;
         copyChars(a->data() + aSize, b->data(), bSize);
@@ -987,7 +1003,10 @@ UString& UString::append(const UString &t)
         // t is empty
     } else if (m_rep == base && !base->isShared()) {
         // this is direct and has refcount of 1 (so we can just alter it directly)
-        expandCapacity(thisOffset + length);
+        int newCapacity = thisOffset + length;
+        if (newCapacity < thisOffset)
+            CRASH();
+        expandCapacity(newCapacity);
         if (data()) {
             copyChars(m_rep->data() + thisSize, t.data(), tSize);
             m_rep->len = length;
@@ -995,7 +1014,10 @@ UString& UString::append(const UString &t)
         }
     } else if (thisOffset + thisSize == base->usedCapacity && thisSize >= minShareSize) {
         // this reaches the end of the buffer - extend it if it's long enough to append to
-        expandCapacity(thisOffset + length);
+        int newCapacity = thisOffset + length;
+        if (newCapacity < thisOffset)
+            CRASH();
+        expandCapacity(newCapacity);
         if (data()) {
             copyChars(m_rep->data() + thisSize, t.data(), tSize);
             m_rep = Rep::create(m_rep, 0, length);
@@ -1054,7 +1076,10 @@ UString& UString::append(UChar c)
         }
     } else if (m_rep == base && !base->isShared()) {
         // this is direct and has refcount of 1 (so we can just alter it directly)
-        expandCapacity(thisOffset + length + 1);
+        int newCapacity = thisOffset + length + 1;
+        if (newCapacity < thisOffset)
+            CRASH();
+        expandCapacity(newCapacity);
         UChar* d = m_rep->data();
         if (d) {
             d[length] = c;
@@ -1063,7 +1088,10 @@ UString& UString::append(UChar c)
         }
     } else if (thisOffset + length == base->usedCapacity && length >= minShareSize) {
         // this reaches the end of the string - extend it and share
-        expandCapacity(thisOffset + length + 1);
+        int newCapacity = thisOffset + length + 1;
+        if (newCapacity < thisOffset)
+            CRASH();
+        expandCapacity(newCapacity);
         UChar* d = m_rep->data();
         if (d) {
             d[length] = c;
